--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио студента</title>
     <link rel="icon" type="image/png" href="../assets/icons/site_logo_icon.png">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -16,9 +16,9 @@
             <nav>
                 <ul>
                     <li><a href="../index.html" class="active">Главная</a></li>
-                    <li><a href="../pages/projects.html">Проекты</a></li>
-                    <li><a href="../pages/diary.html">Дневник</a></li>
-                    <li><a href="../pages/contacts.html">Контакты</a></li>
+                    <li><a href="pages/projects.html">Проекты</a></li>
+                    <li><a href="pages/diary.html">Дневник</a></li>
+                    <li><a href="pages/contacts.html">Контакты</a></li>
                 </ul>
             </nav>
         </div>
