--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <nav>
                 <ul>
                     <li><a href="../index.html" class="active">Главная</a></li>
-                    <li><a href="pages/projects.html">Проекты</a></li>
-                    <li><a href="pages/diary.html">Дневник</a></li>
-                    <li><a href="pages/contacts.html">Контакты</a></li>
+                    <li><a href="/pages/projects.html">Проекты</a></li>
+                    <li><a href="/pages/diary.html">Дневник</a></li>
+                    <li><a href="/pages/contacts.html">Контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,10 +31,10 @@
                     <div class="hero-text">
                         <h2>Привет! Я студент группы ЭФБО-02-24</h2>
                         <p>Увлекаюсь веб-разработкой</p>
-                        <a href="../assets/files/resume.pdf" class="btn" download>Скачать резюме</a>
+                        <a href="/assets/files/resume.pdf" class="btn" download>Скачать резюме</a>
                     </div>
                     <div class="hero-image">
-                        <img src="../assets/images/student.jpg" alt="Фото студента">
+                        <img src="/assets/images/student.jpg" alt="Фото студента">
                     </div>
                 </div>
             </div>
@@ -81,15 +81,15 @@
                 <h2>Лучшие проекты</h2>
                 <div class="projects-grid">
                     <div class="project-card">
-                        <img src="../assets/images/project_1.jpg" alt="Проект 1">
+                        <img src="/assets/images/project_1.jpg" alt="Проект 1">
                         <h3>NailsElizza</h3>
                     </div>
                     <div class="project-card">
-                        <img src="../assets/images/project_2.jpg" alt="Проект 2">
+                        <img src="/assets/images/project_2.jpg" alt="Проект 2">
                         <h3>CoinsPrice</h3>
                     </div>
                     <div class="project-card">
-                        <img src="../assets/images/project_3.png" alt="Проект 3">
+                        <img src="/assets/images/project_3.png" alt="Проект 3">
                         <h3>Трекер задач</h3>
                     </div>
                 </div>
@@ -103,6 +103,6 @@
         </div>
     </footer>
 
-    <script src="../scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
 </body>
 </html>
