--- a/pages/projects.html
+++ b/pages/projects.html
@@ -56,7 +56,7 @@
                     <div class="project-card" data-category="html">
                         <img src="../assets/images/portfolio_project.png" alt="Портфолио">
                         <h3>Портфолио</h3>
-                        <p>Bootstrap</p>
+                        <p>Bootstrap, HTML</p>
                         <button class="btn project-details" data-project="4">Подробнее</button>
                     </div>
                 </div>
@@ -64,12 +64,10 @@
         </section>
     </main>
 
-    <!-- Модальное окно для деталей проекта -->
     <div id="project-modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <div id="modal-body">
-                <!-- Контент модального окна будет заполнен через JavaScript -->
             </div>
         </div>
     </div>
