feat: Practice 13 update

--- a/index.html
+++ b/index.html
@@ -82,15 +82,21 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <img src="./assets/images/project_1.jpg" alt="Проект 1">
-                        <h3>NailsElizza</h3>
+                        <div class="project-content">
+                            <h3>NailsElizza</h3>
+                        </div>
                     </div>
                     <div class="project-card">
                         <img src="./assets/images/project_2.jpg" alt="Проект 2">
-                        <h3>CoinsPrice</h3>
+                        <div class="project-content">
+                            <h3>CoinsPrice</h3>
+                        </div>
                     </div>
                     <div class="project-card">
                         <img src="./assets/images/project_3.png" alt="Проект 3">
-                        <h3>Трекер задач</h3>
+                        <div class="project-content">
+                            <h3>Трекер задач</h3>
+                        </div>
                     </div>
                 </div>
             </div>
