feat: Practice 13 update

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -35,36 +35,44 @@
                     <button class="filter-btn" data-filter="react">React</button>
                 </div>
                 <div class="projects-grid">
-                    <div class="project-card" data-category="html">
+                    <div class="project-card" data-category="html" data-project="1">
                         <img src="../assets/images/self_site_project.png" alt="Личный сайт">
                         <div class="project-content">
                             <h3>Личный сайт</h3>
                             <p>HTML, CSS</p>
-                            <button class="btn project-details" data-project="1">Подробнее</button>
+                            <div class="project-description">
+                                Полностью адаптивный личный сайт с современным дизайном
+                            </div>
                         </div>
                     </div>
-                    <div class="project-card" data-category="js">
+                    <div class="project-card" data-category="js" data-project="2">
                         <img src="../assets/images/news_site_project.png" alt="News-приложение">
                         <div class="project-content">
                             <h3>Новостной портал</h3>
                             <p>JavaScript</p>
-                            <button class="btn project-details" data-project="2">Подробнее</button>
+                            <div class="project-description">
+                                Интерактивное приложение для чтения и управления новостями
+                            </div>
                         </div>
                     </div>
-                    <div class="project-card" data-category="react">
+                    <div class="project-card" data-category="react" data-project="3">
                         <img src="../assets/images/store_project.png" alt="Интернет-магазин">
                         <div class="project-content">
                             <h3>Интернет-магазин</h3>
                             <p>React</p>
-                            <button class="btn project-details" data-project="3">Подробнее</button>
+                            <div class="project-description">
+                                Полнофункциональный магазин с корзиной и системой заказов
+                            </div>
                         </div>
                     </div>
-                    <div class="project-card" data-category="html">
+                    <div class="project-card" data-category="html" data-project="4">
                         <img src="../assets/images/portfolio_project.png" alt="Портфолио">
                         <div class="project-content">
                             <h3>Портфолио</h3>
                             <p>HTML, Bootstrap</p>
-                            <button class="btn project-details" data-project="4">Подробнее</button>
+                            <div class="project-description">
+                                Адаптивное портфолио с использованием современных технологий
+                            </div>
                         </div>
                     </div>
                 </div>
