feat: Practice 13 update

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="contact-item">
                             <img src="../assets/icons/github_icon.png" alt="GitHub">
-                            <span>GitHub: nemolucky</span>
+                            <span>GitHub: <a href="https://github.com/nemolucky/">nemolucky</a></span>
                         </div>
                         <div class="contact-item">
                             <img src="../assets/icons/location_icon.png" alt="Местоположение">
@@ -74,6 +74,6 @@
     </footer>
 
     <script src="../scripts/main.js"></script>
-    <script src="../scripts/form-validation.js"></script>
+    <script src="../scripts/form_validation.js"></script>
 </body>
 </html>
