--- a/pages/diary.html
+++ b/pages/diary.html
@@ -2,7 +2,10 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, viewport-fit=cover"
+		/>
 		<title>Учебный дневник - Портфолио студента</title>
 		<link
 			rel="icon"
@@ -12,13 +15,16 @@
 		<link rel="stylesheet" href="../styles/global.css" />
 		<link rel="stylesheet" href="../styles/diary.css" />
 	</head>
-	<body>
+	<body class="page">
+		<!-- Skip-link для доступности -->
+		<a class="skip-link" href="#main">Перейти к основному содержимому</a>
+
 		<header>
 			<div class="container">
 				<div class="logo">
 					<h1>Пучко Денис</h1>
 				</div>
-				<nav>
+				<nav class="nav" aria-label="Основная навигация">
 					<ul>
 						<li><a href="../index.html">Главная</a></li>
 						<li><a href="projects.html">Проекты</a></li>
@@ -29,7 +35,7 @@
 			</div>
 		</header>
 
-		<main>
+		<main id="main" class="main">
 			<section class="diary">
 				<div class="container">
 					<h2>Мой учебный прогресс</h2>
@@ -91,7 +97,7 @@
 			</section>
 		</main>
 
-		<footer>
+		<footer class="footer">
 			<div class="container">
 				<p>© 2025 Контакты</p>
 			</div>
